source_file = [
    'elinux_shader.cc',
    'elinux_shader_context.cc',
    'elinux_shader_program.cc',
    'elinux_framebuffer.cc',
]

rendering_dep = declare_dependency(
                                    include_directories : include_directories('.'),
                                    sources : source_file
                                  )