source_file = [
    'surface_base.cc',
    'surface_gl.cc',
    'context_egl.cc',
    'elinux_egl_surface.cc',
]

surface_dep = declare_dependency(
                                  include_directories : include_directories('.'),
                                  sources : source_file
                               )