source_file = [
    'test.cpp',
    'xdg-shell-protocol.c',
    'presentation-time-protocol.c',
]

test_dep = declare_dependency(
                                  include_directories : include_directories('.'),
                                  sources : source_file
                               )